fields:datetime,checkbox; size,extension upload validation

--- a/src/published/css/image_storage.css
+++ b/src/published/css/image_storage.css
@@ -68,6 +68,9 @@
     width: 160px;
     height: auto !important;
 }
+.superbox-list{
+    margin-bottom:5px;
+}
 
 .superbox-list.selected{
     border: 1px solid #0091d9!important;
