--- a/src/published/css/image_storage.css
+++ b/src/published/css/image_storage.css
@@ -321,3 +321,11 @@ div.tb-btn-delete-wrap .delete-relation-button {
 .tab-pane .superbox-file .file-extension {
     background-image: url(/packages/vis/image-storage/img/super-icon-file-flat-dark.png);
 }
+
+.pagination-bottom-wrapper {
+    position: fixed;
+    bottom: 0;
+    left:235px;
+    right:15px;
+    z-index:10;
+}
