--- a/src/published/css/image_storage.css
+++ b/src/published/css/image_storage.css
@@ -233,6 +233,14 @@
     text-align: center;
 }
 
+.image-storage-video-iframe-wrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+    z-index: 3;
+}
+
 .image-storage-video-iframe {
     width: 100%;
     padding-right: 25px;
